fix alignment

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -9,11 +9,17 @@ body {
   font-weight:400;
 }
 
-.blogtitle h3 a {
+/*
+div.blogtitle h3 a {
+	color:#222
+}
+*/
+
+div.blogtitle {
 	color:#222
 }
 
-small.right {
+div.right {
 	text-align: right;
 }
 
